--- a/style.css
+++ b/style.css
@@ -20,5 +20,15 @@
   padding: 150px;
 }
 
+element.style {
+    width: 0;
+    padding: 0px;
+    border: none;
+    margin: 0px;
+    height: auto;
+    background: url(https://www.google.com/cse/static/images/1x/en/branding.png) left center no-repeat rgb(255, 255, 255);
+    outline: none;
+}
+
 
 
