--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@
     width: 700px;
 }
 
-.div#gsc-iw-id1 {
-    border-radius: 10px;
+.gsc-input-box {
+    border-radius: 5px;
 }
                 
 
